syntax = "proto3";

package proto;

import "order.proto";

message CreateOrderResponse {
    string Response = 1;
}

service ExchangeService {
    rpc CreateOrder(OrderObj) returns (CreateOrderResponse);
}
